# c-demos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cairo-draw.c  curl-download.c  expat-parse.c  ffmpeg-frames.c  fontconfig-resolve.c  freetype-render.c  fribidi-bidi.c  gtk4-gui.c  harfbuzz-shape.c  harfbuzz.cmake  hbftsvg.cc  hello-harfbuzz-gl.cc  hello-harfbuzz.cc  icu4c-bidi.c  init.bat  init.sh  libjpeg-decode.c  libpng-decode.c  librsvg-render.c  libwebp-decode.c  libzstd-decode.c  lua-run.c  mujs-run.c  openal-stream.c  pangocairo-drawtext.c  qt5-gui.cc  raqm-shape.c  skia-pdf.cc  sqlite-run.c  ssd1306-cairo-clock.c  ssd1306.c  tut0.cpp  tut1.c  tut1.cpp  tut2.c  tut3.cc  (+4 more)
_old/: README.md  dwritetest.cc  emojidump.cc  harfbuzz.cmake  hello-harfbuzz-gl.cc  init.sh  tut3.cc  tut4.cc
